kubernetes/manifests/coffee-machine/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coffee-machine
spec:
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: coffee-machine
  template:
    metadata:
      labels:
        app: coffee-machine
    spec:
      containers:
        - name: coffee-machine
          image: 'ghcr.io/robkenis/chaos-coffee/coffee-machine:latest'
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
