kubernetes/manifests/coffee-machine/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coffee-machine
spec:
  ports:
    - port: 80
      targetPort: http
      name: http
  selector:
    app: coffee-machine
